--- a/client/package.json
+++ b/client/package.json
@@ -28,9 +28,11 @@
     "es5-shim": "^4.5.7",
     "expose-loader": "^0.7.1",
     "imports-loader": "^0.6.5",
+    "material-ui": "^0.15.4",
     "react": "^0.14.8 || ^15.0.0",
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "6.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "webpack": "^1.12.14"
   },
   "devDependencies": {}
